--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-.project
+.DS_Store
+
 *.log
-*.prefs
-target
-**/target
-.idea
+
+target/
+**/target/
+**/node_modules/
+
+.idea/
 *.iml
-**/node_modules
-stop-start.log
+
