--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,8 @@
   "description": "React and SAM pattern",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --port 9090 --debug --inline --output-public-path /assets/ --content-base target/frontend-dist --config webpack.config.js"
+    "start": "webpack-dev-server --port 9090 --debug --inline --output-public-path /assets/ --content-base target/frontend-dist --config webpack.config.js",
+    "unlock": "sudo chown michelemendel:staff package.json"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.13.0",
     "css-loader": "^0.23.1",
+    "css-reset-and-normalize": "^0.3.0",
     "export-files-webpack-plugin": "0.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.8.5",
