--- a/web/package.json
+++ b/web/package.json
@@ -27,7 +27,7 @@
     "file-loader": "0.8.5",
     "flat": "^2.0.1",
     "html-webpack-plugin": "1.7.0",
-    "immutability-helper": "^2.0.0",
+    "immutable": "^3.8.1",
     "json-loader": "^0.5.4",
     "moment": "^2.15.1",
     "node-sass": "^3.13.0",
