--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,9 @@
   "description": "React and SAM pattern",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --port 9090 --debug --inline --output-public-path /assets/ --content-base target/frontend-dist --config webpack.config.js",
-    "unlock": "sudo chown michelemendel:staff package.json"
+    "start": "webpack-dev-server --config webpack.config.js",
+    "unlock": "sudo chown michelemendel:staff package.json",
+    "envTest": "NODE_ENV=production node -e 'console.log(process.env.NODE_ENV);'"
   },
   "repository": {
     "type": "git",
@@ -13,13 +14,7 @@
   },
   "author": "",
   "license": "BSD-2-Clause",
-  "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.13.0",
+  "dependencies": {
     "css-loader": "^0.23.1",
     "css-reset-and-normalize": "^0.3.0",
     "export-files-webpack-plugin": "0.0.1",
@@ -41,7 +36,15 @@
     "react-virtualized-select": "^1.3.0",
     "rest": "^1.3.2",
     "sass-loader": "3.1.2",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.7"
+  },
+  "devDependencies": {
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.13.0",
     "webpack": "1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
