--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ucp-light",
+  "name": "sam-react",
   "version": "1.0.0",
   "description": "React and SAM pattern",
   "main": "app.js",
@@ -45,7 +45,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.13.0",
-    "webpack": "1.13.1",
+    "webpack": "^1.14.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
