--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.13.0",
+    "jshint": "^2.9.4",
+    "jshint-loader": "^0.8.3",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.14.1"
   }
