--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,8 @@
   "description": "React and SAM pattern",
   "main": "app.js",
   "scripts": {
+    "build-not-prod": "webpack",
+    "build": "webpack -p",
     "start": "webpack-dev-server --config webpack.config.js",
     "unlock": "sudo chown michelemendel:staff package.json",
     "envTest": "NODE_ENV=production node -e 'console.log(process.env.NODE_ENV);'"
@@ -40,13 +42,15 @@
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.13.0",
-    "jshint": "^2.9.4",
-    "jshint-loader": "^0.8.3",
+    "eslint": "^3.12.2",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-react": "^6.8.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.14.1"
   }
