--- a/package.json
+++ b/package.json
@@ -3,33 +3,45 @@
   "version": "1.0.0",
   "description": "React and SAM pattern",
   "main": "app.js",
-  "keywords": ["react", "sam pattern"],
+  "keywords": [
+    "react",
+    "sam pattern"
+  ],
   "author": "Michele Mendel",
   "license": "ISC",
-    "repository": {
+  "repository": {
     "type": "git",
     "url": "https://github.com/michelemendel/samreact"
   },
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --open",
-    "build": "webpack",
+    "build": "NODE_ENV=development webpack",
+    "build:prod": "NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "normalize.css": "^7.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "flat": "^2.0.1",
     "html-webpack-plugin": "^2.29.0",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.3",
+    "normalize.css": "^7.0.0",
     "npm-run-all": "^4.0.2",
+    "ramda": "^0.24.1",
+    "react": "^15.6.1",
+    "react-datepicker": "^0.48.0",
+    "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
