--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "React and SAM pattern",
   "main": "app.js",
   "keywords": [
+    "ES2015",
+    "ES2017",
     "react",
     "sam pattern"
   ],
@@ -16,8 +18,7 @@
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --open",
     "build": "NODE_ENV=development webpack",
-    "build:prod": "NODE_ENV=production webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:prod": "NODE_ENV=production webpack"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -40,7 +41,6 @@
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
