--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "url": "https://github.com/michelemendel/samreact"
   },
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --open",
-    "build": "NODE_ENV=development webpack",
-    "build:prod": "NODE_ENV=production webpack"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open",
+    "build": "cross-env NODE_ENV=development webpack",
+    "build:prod": "cross-env NODE_ENV=production webpack"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -27,6 +27,7 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "blueimp-md5": "^2.7.0",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
